--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,4 +1,4 @@
-article class="example" id="uk">
+rticle class="example" id="uk">
   <h1>HTML-partials</h1>
 
   <!--
@@ -35,3 +35,4 @@ article class="example" id="uk">
 
   <div class="background"></div>
 </article>
+
