--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,8 @@
 @import './common';
 @import './example';
+@import './base/reset';
+@import './utils/mixins';
+@import './base/body';
+@import './base/container';
+@import './layout/header';
+@import './layout/gallery';
