--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,7 +15,7 @@
       >
         <use
           class="button-submit__img"
-          href="./images/img-svg.svg#icon-search"
+          href="./images/search.svg#icon-search"
         ></use>
       </svg>
 
