--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,5 @@
 @import './common';
-@import './example';
+// @import './example';
 @import './base/reset';
 @import './utils/mixins';
 @import './base/body';
