--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -10,11 +10,11 @@
   //<p>
     The
     //<a
-      href="https://github.com/posthtml/posthtml-include"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      posthtml-include
+      <!-- href="https://github.com/posthtml/posthtml-include" -->
+      <!-- target="_blank" -->
+      <!-- rel="noopener noreferrer" -->
+    <!-- > -->
+      <!-- posthtml-include -->
     //</a>
     plugin allows you to add code from other HTML files (fragments) to HTML page
     files. Fragments are stored in the <code>src/partials</code> folder. The
