--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,7 +13,10 @@
         height="24px"
         aria-label="скролл"
       >
-        <use class="button-submit__img" href="./images/search.svg"></use>
+        <use
+          class="button-submit__img"
+          href="./images/search.svg#icon-search"
+        ></use>
       </svg>
 
       <span class="button-submit__text">Search</span>
