--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -8,7 +8,7 @@
 
         <a class="scroll-btn is-hidden" title="Return to top">
             <svg class="scroll-btn__svg" width="24px" height="24px" aria-label="скролл">
-                <use class="scroll-btn__img" href=" "></use>
+                <use class="scroll-btn__img" href="src\images\search.svg#icon-arrow-up2"></use>
             </svg>
         </a>
         </div>
